# love-where-you-live

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  run-local.sh
alembic/: env.py
backend/: .env.example
backend/alembic/: env.py
backend/alembic/versions/: 20260222_0001_create_anchor_table.py  20260227_0002_add_anchor_user_email.py  20260228_0003_create_project_table.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  anchors.py  projects.py  system.py
backend/app/core/: security.py  settings.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  anchor.py  project.py
backend/scripts/: dev_pgserver.py
backend/tests/: conftest.py  test_anchors_routes.py  test_api_routing.py  test_projects_routes.py  test_settings.py  test_system_routes.py
docs/: project-context.md
stitch/love-where-you-live/results-dashboard/: results-dashboard.html
stitch/love-where-you-live/welcome-moves/: welcome-313f87.html
svelte-frontend/: .env.example  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
svelte-frontend/src/: app.css  app.d.ts  hooks.server.ts
svelte-frontend/src/lib/: config.test.ts  config.ts  index.ts
svelte-frontend/src/lib/api/: client.test.ts  client.ts
svelte-frontend/src/lib/components/: AnchorManager.svelte
svelte-frontend/src/lib/server/: anchor-form.test.ts  anchor-form.ts  anchors-api.test.ts  anchors-api.ts  project-form.test.ts  project-form.ts  (+4 more)
svelte-frontend/src/routes/: +page.server.ts  +page.svelte  page.svelte.spec.ts
(+18 files in other folders)
